Реализованы кнопки в чате с ботом для улучшения пользовательского опыта.